[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driver-safety-env"
version = "0.1.0"
description = "Driver Safety OpenEnv Environment"
requires-python = ">=3.9"
dependencies = [
    "openenv-core",
    "openai",
    "pydantic",
    "pyyaml",
    "numpy",
    "scipy",
    "fastapi",
    "uvicorn"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
